--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,4 @@
 {% set version = "0.1-12" %}
-
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
 
@@ -8,10 +7,9 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: multicool_{{ version }}.tar.gz
   url:
-    - https://cran.r-project.org/src/contrib/multicool_{{ version }}.tar.gz
-    - https://cran.r-project.org/src/contrib/Archive/multicool/multicool_{{ version }}.tar.gz
+    - {{ cran_mirror }}/src/contrib/multicool_{{ version }}.tar.gz
+    - {{ cran_mirror }}/src/contrib/Archive/multicool/multicool_{{ version }}.tar.gz
   sha256: 487d28d9c3c606be0cf56e2d8f8b0d79fb71949c68886ea9251fbb1c01664a36
 
 build:
@@ -32,6 +30,7 @@ requirements:
     - {{ posix }}sed               # [win]
     - {{ posix }}coreutils         # [win]
     - {{ posix }}zip               # [win]
+    - cross-r-base {{ r_base }}    # [build_platform != target_platform]
   host:
     - r-base
     - r-rcpp >=0.11.2
@@ -42,12 +41,12 @@ requirements:
 
 test:
   commands:
-    - $R -e "library('multicool')"  # [not win]
+    - $R -e "library('multicool')"           # [not win]
     - "\"%R%\" -e \"library('multicool')\""  # [win]
 
 about:
   home: https://CRAN.R-project.org/package=multicool
-  license: GPL-2
+  license: GPL-2.0-only
   summary: A set of tools to permute multisets without loops or hash tables and to generate integer partitions. The permutation functions are based on C code from Aaron Williams. Cool-lex order is similar to colexicographical order. The algorithm is described in Williams, A. (2009)  <DOI:10.1145/1496770.1496877> Loopless
     Generation of Multiset Permutations by Prefix Shifts. Symposium on Discrete Algorithms, New York, United States. The permutation code is distributed without restrictions. The code for stable and efficient computation of multinomial coefficients comes from Dave Barber. The code can be download from <http://tamivox.org/dave/multinomial/code.html>
     and is distributed without conditions. The package also generates the integer partitions of a positive, non-zero integer n. The C++ code for this is based on Python code from Jerome Kelleher which can be found here <http://jeromekelleher.net/tag/integer-partitions.html>. The C++ code and Python code are distributed without
